# apertium-mlt-spa

./: .gitattributes  .gitignore  Makefile.am  apertium-mlt-spa.mlt-spa.dix  apertium-mlt-spa.mlt-spa.lrx  apertium-mlt-spa.spa-mlt.lrx  configure.ac  modes.xml
